src/objects/Cluster__c.object
<CustomObject>
    <fields>
        <fullName>Country_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Clusters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IATA_Local_Office__c</fullName>
        <label>IATA Local Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Group_Type__c</fullName>
        <label>Local Group Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>APJC</fullName>
                </value>
                <value>
                    <fullName>APJC / FAG</fullName>
                </value>
                <value>
                    <fullName>CAPJC</fullName>
                </value>
                <value>
                    <fullName>CCC</fullName>
                </value>
                <value>
                    <fullName>CEC</fullName>
                </value>
                <value>
                    <fullName>CGA</fullName>
                </value>
                <value>
                    <fullName>ICAP</fullName>
                </value>
                <value>
                    <fullName>JALWG</fullName>
                </value>
                <value>
                    <fullName>LCAG-C</fullName>
                </value>
                <value>
                    <fullName>LCAG-P</fullName>
                </value>
                <value>
                    <fullName>LCAG-P / Credit Card WG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Africa &amp; Middle East</fullName>
                    <label>Africa and Middle East</label>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Asia &amp; Pacific</fullName>
                    <label>Asia and Pacific</label>
                </value>
                <value>
                    <fullName>China &amp; North Asia</fullName>
                    <label>North Asia</label>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <label>Sub Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AR-PY-UY</fullName>
                </value>
                <value>
                    <fullName>CA-BM</fullName>
                </value>
                <value>
                    <fullName>Caribbean</fullName>
                </value>
                <value>
                    <fullName>Central America</fullName>
                </value>
                <value>
                    <fullName>Central Asia</fullName>
                </value>
                <value>
                    <fullName>Central Europe</fullName>
                </value>
                <value>
                    <fullName>CN-MN-KP</fullName>
                </value>
                <value>
                    <fullName>Eastern Europe</fullName>
                </value>
                <value>
                    <fullName>FR-BE-NL</fullName>
                </value>
                <value>
                    <fullName>GB-IE</fullName>
                </value>
                <value>
                    <fullName>GR-CY</fullName>
                </value>
                <value>
                    <fullName>Gulf and Near East</fullName>
                </value>
                <value>
                    <fullName>HK-MO</fullName>
                </value>
                <value>
                    <fullName>Iberian Peninsula</fullName>
                </value>
                <value>
                    <fullName>IN-NP-BT</fullName>
                </value>
                <value>
                    <fullName>LK-MY-BD-MV-BN</fullName>
                </value>
                <value>
                    <fullName>Nordic and Baltic</fullName>
                </value>
                <value>
                    <fullName>North Africa and Levant</fullName>
                </value>
                <value>
                    <fullName>PE-BO</fullName>
                </value>
                <value>
                    <fullName>RU-BY</fullName>
                </value>
                <value>
                    <fullName>South and East Africa</fullName>
                </value>
                <value>
                    <fullName>Southern Europe</fullName>
                </value>
                <value>
                    <fullName>Southwest Pacific</fullName>
                </value>
                <value>
                    <fullName>TH-KH-MM-LA</fullName>
                </value>
                <value>
                    <fullName>TR-TM-AZ</fullName>
                </value>
                <value>
                    <fullName>UA-GE-AM</fullName>
                </value>
                <value>
                    <fullName>West and Central Africa</fullName>
                </value>
                <value>
                    <fullName>Western Balkans</fullName>
                </value>
                <value>
                    <fullName>not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Name__c</fullName>
        <label>Unique Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Cluster</label>
    <listViews>
        <fullName>All_Clusters</fullName>
        <columns>Region__c</columns>
        <columns>NAME</columns>
        <columns>Local_Group_Type__c</columns>
        <columns>IATA_Local_Office__c</columns>
        <columns>Country_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Clusters</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Cluster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clusters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>